added a script to initialize all cells with a button click

--- a/Vincent/scripts/solutionToggleExample.ipynb
+++ b/Vincent/scripts/solutionToggleExample.ipynb
@@ -2,41 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "  function code_toggle() {\n",
-       "    if (code_shown){\n",
-       "      $('div.input').hide('500');\n",
-       "      $('#toggleButton').val('Show Code')\n",
-       "    } else {\n",
-       "      $('div.input').show('500');\n",
-       "      $('#toggleButton').val('Hide Code')\n",
-       "    }\n",
-       "    code_shown = !code_shown\n",
-       "  }\n",
-       "\n",
-       "  $( document ).ready(function(){\n",
-       "    code_shown=false;\n",
-       "    answer_shown = false;\n",
-       "    $(\".container .cell\").eq(4).hide();\n",
-       "    $('div.input').hide()  \n",
-       "  });\n",
-       "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%html\n",
     "<script>\n",
@@ -54,7 +22,7 @@
     "  $( document ).ready(function(){\n",
     "    code_shown=false;\n",
     "    answer_shown = false;\n",
-    "    $(\".container .cell\").eq(4).hide();\n",
+    "    myId = document.getElementById('Answer').parentElement.style.display = \"none\"\n",
     "    $('div.input').hide()  \n",
     "  });\n",
     "</script>\n",
@@ -79,15 +47,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<script>\n",
+       "var answerCell = $(\".container .cell\").eq(4);\n",
        "    function answer_toggle() {\n",
-       "        var answerCell = $(\".container .cell\").eq(4);\n",
        "        if(answer_shown) {\n",
        "            answerCell.hide();\n",
        "        } else {\n",
@@ -95,8 +63,10 @@
        "        }\n",
        "        answer_shown = !answer_shown;\n",
        "    }\n",
-       "    \n",
-       "    \n",
+       "    myId = document.getElementById('Answer').parentElement\n",
+       "    myId.style.display = \"block\"\n",
+       "    console.log(document.getElementById('Answer').parentElement)\n",
+       "    console.log(answerCell)\n",
        "</script>\n",
        "<form action=\"javascript:answer_toggle()\"><input type=\"submit\" id=\"answerToggle\" value=\"Answer\"></form>"
       ],
@@ -111,8 +81,8 @@
    "source": [
     "%%html\n",
     "<script>\n",
+    "var answerCell = $(\".container .cell\").eq(4);\n",
     "    function answer_toggle() {\n",
-    "        var answerCell = $(\".container .cell\").eq(4);\n",
     "        if(answer_shown) {\n",
     "            answerCell.hide();\n",
     "        } else {\n",
@@ -120,8 +90,10 @@
     "        }\n",
     "        answer_shown = !answer_shown;\n",
     "    }\n",
-    "    \n",
-    "    \n",
+    "    myId = document.getElementById('Answer').parentElement\n",
+    "    myId.style.display = \"block\"\n",
+    "    console.log(document.getElementById('Answer').parentElement)\n",
+    "    console.log(answerCell)\n",
     "</script>\n",
     "<form action=\"javascript:answer_toggle()\"><input type=\"submit\" id=\"answerToggle\" value=\"Answer\"></form>"
    ]
@@ -133,6 +105,65 @@
     "#### Answer\n",
     "since $2+2=4$, $x=4$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    myId = document.getElementById('Answer').parentElement\n",
+       "    function answer_toggle() {\n",
+       "        if(myId.style.display === \"none\") {\n",
+       "            myId.style.display = \"block\"\n",
+       "        } else {\n",
+       "            myId.style.display = \"none\";\n",
+       "        }\n",
+       "    }\n",
+       "   \n",
+       "</script>\n",
+       "<form action=\"javascript:answer_toggle()\"><input type=\"submit\" id=\"answerToggle\" value=\"Answer\"></form>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<script>\n",
+    "    myId = document.getElementById('Answer').parentElement\n",
+    "    function answer_toggle() {\n",
+    "        if(myId.style.display === \"none\") {\n",
+    "            myId.style.display = \"block\"\n",
+    "        } else {\n",
+    "            myId.style.display = \"none\";\n",
+    "        }\n",
+    "    }\n",
+    "   \n",
+    "</script>\n",
+    "<form action=\"javascript:answer_toggle()\"><input type=\"submit\" id=\"answerToggle\" value=\"Answer\"></form>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
