Added history and automatic run

--- a/Nicole/Order_of_Operations.ipynb
+++ b/Nicole/Order_of_Operations.ipynb
@@ -1,23 +1,93 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
+       "    require(\n",
+       "        ['base/js/namespace', 'jquery'], \n",
+       "        function(jupyter, $) {\n",
+       "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+       "                console.log(\"Auto-running all cells-below...\");\n",
+       "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+       "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+       "            });\n",
+       "        }\n",
+       "    );\n",
+       "</script>\n",
+       "\n",
+       "<script>\n",
+       "    display='block';\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# Order of Operations\n",
+    "%%html\n",
+    "<script>\n",
+    "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
+    "    require(\n",
+    "        ['base/js/namespace', 'jquery'], \n",
+    "        function(jupyter, $) {\n",
+    "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+    "                console.log(\"Auto-running all cells-below...\");\n",
+    "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+    "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+    "            });\n",
+    "        }\n",
+    "    );\n",
+    "</script>\n",
     "\n",
-    "### Needs more content\n",
-    "\n",
-    "##### Created by Nicole Vachon\n",
-    "\n",
-    "This is not complete, or in a proper order, it is simply a collection of ideas for examples and practice questions."
+    "<script>\n",
+    "    display='block';\n",
+    "</script>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Order of Operations is:\n",
+    "***\n",
+    "\n",
+    "<h1><center>Order of Operations</center></h1>\n",
+    "\n",
+    "### Needs more content\n",
+    "\n",
+    "##### Created by Nicole Vachon\n",
+    "\n",
+    "This notebook is not complete, though a flow between ideas and examples is developping."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem\n",
+    "\n",
+    "How do we figure out the answer to a really hard expression like this??\n",
+    "\n",
+    "    8 + 5 / 3^2 x (7 - 4) / (6 + 9)\n",
+    "    \n",
+    "We can use the order of operations to break this problem down into simple steps that we already know how to do!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Order of Operations is:\n",
     "\n",
     "* **B**rackets\n",
     "* **E**xponents\n",
@@ -28,6 +98,8 @@
     "\n",
     "Where Division and Multiplication are done left to right if theres mulitple and so is Addition and Subtraction. It can be visualized as a pyramid.\n",
     "\n",
+    "This is commonly remembered by the word **BEDMAS** or **PEDMAS** (if one uses the word paratheses instead of brackets) or **BODMAS** (if one uses the word order instead of exponents). Some people also remember this order by the phrase **P**lease **E**xcuse **M**y **D**ear **A**unt **S**ally.\n",
+    "\n",
     "![Pyramid](http://4.bp.blogspot.com/-zfTGFH6aoZw/VU1oBBlxVVI/AAAAAAAACM0/kBKeNwlnMd0/s1600/Slide1.png)"
    ]
   },
@@ -35,6 +107,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### What happens if theres multiple operations on the same level of the pyramid?? \n",
+    "\n",
+    "They're done in order from left to right!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### But why do we have the order of operations? Why not another order?\n",
+    "\n",
+    "The short answer is because there are the base operations, addition and subtraction, which then make up all the other operations so we want to do the most complex operations first before moving onto the simpler operations. The brackets are then added to show extra meaning that couldn't be written another way, which is why they must be done first. \n",
+    "\n",
+    "The long answer can be found here: http://mathforum.org/library/drmath/view/52582.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "******\n",
+    "\n",
+    "### What do computers do?\n",
+    "\n",
     "If you want to type your expressions into an input box, the operators are:\n",
     "* Brackets: `(` and `)`\n",
     "* Exponents: `**`\n",
@@ -48,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try inputting 3 + 5 * 6 into python:"
+    "Let's try inputting 3 + 5 x 6 into python:"
    ]
   },
   {
@@ -75,7 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now see the difference when the input is (3 + 5) * 6:"
+    "Now lets see when the input is (3 + 5) x 6:"
    ]
   },
   {
@@ -102,7 +198,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now lets see when the input is 3 + (5 * 6):"
+    "Now lets see when the input is 3 + (5 x 6):"
    ]
   },
   {
@@ -129,20 +225,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that the computer runs the second one when no brackets are added. What comclusion can we draw from this?"
+    "We can see that the computer runs the second one when no brackets are added. What conclusion can we draw from this?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How is the expression 2^3 x (4 + 8) evaluated?\n",
+    "\n",
     "example walk-through:\n",
     "\n",
-    ">2^3 * **(4 + 8)**\n",
+    ">2^3 x **(4 + 8)**\n",
     ">\n",
-    ">**2^3** * 12\n",
+    ">**2^3** x 12\n",
     ">\n",
-    "> **8  * 12**\n",
+    "> **8  x 12**\n",
     ">\n",
     ">   96"
    ]
@@ -151,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "how about 2^3 * (4 + 8) on the computer:"
+    "how about 2^3 x (4 + 8) on the computer:"
    ]
   },
   {
@@ -178,18 +276,175 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try a few Practice Questions:"
+    "What to see another example? Watch this [video](https://www.youtube.com/watch?v=Y3CZ_JBQ0do) and try to solve it before they get to the solution!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*****\n",
+    "\n",
+    "### Mixing things up\n",
+    "\n",
+    "Let us start with a number and 3 operations that can be applied to the number:\n",
+    "\n",
+    ">5\n",
+    ">\n",
+    ">_*4\n",
+    ">\n",
+    ">_+7\n",
+    ">\n",
+    ">_^2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What output do we get by doing the addition, then the exponent, then the multiplication?\n",
+    "\n",
+    "5 + 7 = <font color='green'>12</font>\n",
+    "<font color='green'>12</font>^2 = <font color='blue'>144</font>\n",
+    "<font color='blue'>144</font> * 4 = 576\n",
+    "\n",
+    "How can we write all these expressions in one line to get this output?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "576"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(5+7)**2*4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What output do we get by doing the exponent, then the addition, then the mulitplication?\n",
+    "\n",
+    "5^2 = <font color='green'>25</font>\n",
+    "<font color='green'>25</font> + 7 = <font color='blue'>32</font>\n",
+    "<font color='blue'>32</font> * 4 = 128\n",
+    "\n",
+    "How can we write these expressions in one line to get this output?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "128"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(5**2+7)*4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Why can't these expressions be written as 5+7^2x4 and 5^2+7x4 respectively? What do these expressions output?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "201"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5+7**2*4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5**2+7*4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Can you think of another order to write these operations that give a different output? \n",
+    "\n",
+    "Try typing it in the block below then press *Shift+Enter* to run the block to see its output."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*********\n",
+    "\n",
+    "### Try a few Practice Questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b2a019b56d459fa908fd9c60ba34d6",
+       "model_id": "a495f600f6524abcac5aae929ef27f7f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -218,7 +473,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "14187d3c03c94dd4ad6d99c0bf5db120",
+       "model_id": "01f37572a80d483fb1f47aec81b22fed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +522,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,184 +604,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Y3CZ_JBQ0do?rel=0&amp;start=17\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython.display import HTML\n",
-    "\n",
-    "# Youtube\n",
-    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Y3CZ_JBQ0do?rel=0&amp;start=17\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Walk through video](https://www.youtube.com/watch?v=Y3CZ_JBQ0do)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us start with a number and 3 operations that can be applied to the number:\n",
+    "### Back to our first Problem\n",
     "\n",
-    ">5\n",
-    ">\n",
-    ">_*4\n",
-    ">\n",
-    ">_+7\n",
-    ">\n",
-    ">_^2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What output do we get by doing the addition then the exponent then the multiplication?\n",
+    "Now that you have some examples under your belt, let us go back to the hard expression at the beginning of this notebook\n",
     "\n",
-    "5+7 = 12\n",
+    "     8 + 5 / 3^2 x (7 - 4) / (6 + 9)\n",
+    "     \n",
+    "What part of this problem do we do first?\n",
     "\n",
-    "12^2 = 144\n",
+    "Can you write all the steps to solve this problem in order?\n",
     "\n",
-    "144*4 = 576\n",
-    "\n",
-    "How can we write all these expressions in one line to get this output?"
+    "What was your final answer?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "576"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(5+7)**2*4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "What output do we get by doing exponent then addition then mulitplication?\n",
-    "\n",
-    "5^2 = 25\n",
-    "\n",
-    "25+7 = 32\n",
-    "\n",
-    "32*4 = 128\n",
-    "\n",
-    "How can we write these expressions in one line to get this output?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "128"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(5**2+7)*4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Why can't these expressions be written as 5+7^2x4 and 5^2+7x4 respectively?\n",
-    "what do these expressions output?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "201"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5+7**2*4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "53"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "5**2+7*4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Can you think of another order to write these operations that give a different output?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
