Extra picture and student example

--- a/Nicole/Order_of_Operations.ipynb
+++ b/Nicole/Order_of_Operations.ipynb
@@ -8,6 +8,66 @@
     {
      "data": {
       "text/html": [
+       " \n",
+       "<script>\n",
+       "  function code_toggle() {\n",
+       "    if (code_shown){\n",
+       "      $('div.input').hide('500');\n",
+       "      $('#toggleButton').val('Show Code')\n",
+       "    } else {\n",
+       "      $('div.input').show('500');\n",
+       "      $('#toggleButton').val('Hide Code')\n",
+       "    }\n",
+       "    code_shown = !code_shown\n",
+       "  }\n",
+       "\n",
+       "  $( document ).ready(function(){\n",
+       "    code_shown=false;\n",
+       "    $('div.input').hide()\n",
+       "  });\n",
+       "</script>\n",
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form> "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from IPython.display import HTML\n",
+    "HTML(''' \n",
+    "<script>\n",
+    "  function code_toggle() {\n",
+    "    if (code_shown){\n",
+    "      $('div.input').hide('500');\n",
+    "      $('#toggleButton').val('Show Code')\n",
+    "    } else {\n",
+    "      $('div.input').show('500');\n",
+    "      $('#toggleButton').val('Hide Code')\n",
+    "    }\n",
+    "    code_shown = !code_shown\n",
+    "  }\n",
+    "\n",
+    "  $( document ).ready(function(){\n",
+    "    code_shown=false;\n",
+    "    $('div.input').hide()\n",
+    "  });\n",
+    "</script>\n",
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form> ''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
        "<script>\n",
        "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
        "    require(\n",
@@ -109,7 +169,7 @@
    "source": [
     "#### What happens if theres multiple operations on the same level of the pyramid?? \n",
     "\n",
-    "They're done in order from left to right!"
+    "They're done in order from left to right! (As long as there are no brackets)"
    ]
   },
   {
@@ -149,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +218,7 @@
        "33"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +245,7 @@
        "48"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +272,7 @@
        "33"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,6 +286,14 @@
    "metadata": {},
    "source": [
     "We can see that the computer runs the second one when no brackets are added. What conclusion can we draw from this?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Look at the picture below, what order do you think each calculator is using? Based on the BEDMAS order, which answer is right?\n",
+    "<div style=\"width: 300px;\">![Picture](https://saravanderwerf.com/wp-content/uploads/2018/04/order-of-operations-on-calc.jpg)</div>"
    ]
   },
   {
@@ -254,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +331,7 @@
        "96"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +344,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What to see another example? Watch this [video](https://www.youtube.com/watch?v=Y3CZ_JBQ0do) and try to solve it before they get to the solution!"
+    "Want to see another example? Watch this [video](https://www.youtube.com/watch?v=Y3CZ_JBQ0do) and try to solve it before they get to the solution!"
    ]
   },
   {
@@ -313,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +390,7 @@
        "576"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +423,7 @@
        "128"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +450,7 @@
        "201"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +470,7 @@
        "53"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,14 +505,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Try solving this"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\n",
+      "Try the question again\n",
+      "Solve 7 * (9 - 4)/2 + 3 using the order of operations and write your answer below:\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c17998af1050437d891e5845d790e86d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>FloatText</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "FloatText(value=7.0, description='Your Answer')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are correct!\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = widgets.FloatText(value = 0, description='Your Answer',contiuous_update = False)\n",
+    "op1 = widgets.Dropdown(value='', options={'Addition', 'Multiplication', 'Division', 'Brackets',''}, \n",
+    "                         description='First Operation:',)\n",
+    "op2 = widgets.Dropdown(value='', options={'Addition', 'Multiplication', 'Division',''}, \n",
+    "                         description='Second Operation:',)\n",
+    "op3 = widgets.Dropdown(value='', options={'Addition', 'Division',''}, \n",
+    "                         description='Third Operation:',)\n",
+    "def display():\n",
+    "    print(\"Solve 7 * (9 - 4)/2 + 3 using the order of operations and write your answer below:\")\n",
+    "    IPython.display.display(answer)\n",
+    "def check2(b):\n",
+    "    if op1.value == 'Brackets':\n",
+    "        print(\"Great! What did you do next?\")\n",
+    "        IPython.display.display(op2)\n",
+    "    else:\n",
+    "        IPython.display.clear_output(wait=False)\n",
+    "        print(\"Remember the B in BEDMAS is for brackets, try the question again.\")\n",
+    "        display()\n",
+    "        \n",
+    "def check3(c):\n",
+    "    if op2.value == 'Multiplication':\n",
+    "        print(\"Awesome! What did you do next?\")\n",
+    "        IPython.display.display(op3)\n",
+    "    else:\n",
+    "        IPython.display.clear_output(wait=False)\n",
+    "        print(\"Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\\nTry the question again\")\n",
+    "        display()\n",
+    "        \n",
+    "def check4(d):\n",
+    "    if op3.value == 'Division':\n",
+    "        print(\"Well done! If you did not get 9.5, it must have been a calculation error, try each step again.\")\n",
+    "    else:\n",
+    "        IPython.display.clear_output(wait=False)\n",
+    "        print(\"Remember division and multiplication are done before addition and subtraction, try the question again.\")\n",
+    "        display()\n",
+    "        \n",
+    "def check(a):\n",
+    "    if answer.value == 9.5:\n",
+    "        print(\"You are correct!\")\n",
+    "    else:\n",
+    "        print(\"Sorry, that's not the right answer. Which operation did you do first?\")\n",
+    "        IPython.display.display(op1)\n",
+    "\n",
+    "display()\n",
+    "answer.observe(check, 'value')\n",
+    "op1.observe(check2, 'value')\n",
+    "op2.observe(check3, 'value')\n",
+    "op3.observe(check4, 'value')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A few more questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a495f600f6524abcac5aae929ef27f7f",
+       "model_id": "7c0f59589eb74c42af93bc4e7a06a20d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -464,7 +648,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Dropdown(description='Difficulty:', options=('Medium', 'Easy', 'Hard'), value='Medium')"
+       "Dropdown(description='Difficulty:', options=('Hard', 'Easy', 'Medium'), value='Hard')"
       ]
      },
      "metadata": {},
@@ -473,7 +657,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "01f37572a80d483fb1f47aec81b22fed",
+       "model_id": "92b06a114282429db86320f2307562d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -498,33 +682,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "    if (code_show){\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-       "    } else {\n",
-       "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-       "    }\n",
-       "    code_show = !code_show\n",
-       "} \n",
-       "\n",
-       "$( document ).ready(code_toggle);\n",
-       "</script>\n",
-       "\n",
-       "To show/hide this cell's raw code input, click <a href=\"javascript:code_toggle()\">here</a>."
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -584,23 +741,7 @@
     "    \n",
     "    \n",
     "IPython.display.display(choice, Start)\n",
-    "Start.on_click(display)\n",
-    "\n",
-    "HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "    if (code_show){\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').hide();\n",
-    "    } else {\n",
-    "        $('div.cell.code_cell.rendered.selected div.input').show();\n",
-    "    }\n",
-    "    code_show = !code_show\n",
-    "} \n",
-    "\n",
-    "$( document ).ready(code_toggle);\n",
-    "</script>\n",
-    "\n",
-    "To show/hide this cell's raw code input, click <a href=\"javascript:code_toggle()\">here</a>.''')"
+    "Start.on_click(display)"
    ]
   },
   {
