--- a/Nicole/Order_of_Operations.ipynb
+++ b/Nicole/Order_of_Operations.ipynb
@@ -2,117 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       " \n",
        "<script>\n",
-       "  function code_toggle() {\n",
-       "    if (code_shown){\n",
-       "      $('div.input').hide('500');\n",
-       "      $('#toggleButton').val('Show Code')\n",
-       "    } else {\n",
-       "      $('div.input').show('500');\n",
-       "      $('#toggleButton').val('Hide Code')\n",
-       "    }\n",
-       "    code_shown = !code_shown\n",
+       "code_show=true; \n",
+       "function code_toggle() {\n",
+       "  if (code_show) {\n",
+       "    $('div.input').each(function(id) {\n",
+       "      el = $(this).find('.cm-variable:first');\n",
+       "      if (id == 0 || el.text() == 'hide_me') {\n",
+       "        $(this).hide();\n",
+       "      }\n",
+       "    });\n",
+       "    $('div.output_prompt').css('opacity', 0);\n",
+       "  } else {\n",
+       "    $('div.input').each(function(id) {\n",
+       "      $(this).show();\n",
+       "    });\n",
+       "    $('div.output_prompt').css('opacity', 1);\n",
        "  }\n",
-       "\n",
-       "  $( document ).ready(function(){\n",
-       "    code_shown=false;\n",
-       "    $('div.input').hide()\n",
-       "  });\n",
+       "  code_show = !code_show\n",
+       "} \n",
+       "$( document ).ready(code_toggle);\n",
        "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form> "
+       "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "HTML(''' \n",
-    "<script>\n",
-    "  function code_toggle() {\n",
-    "    if (code_shown){\n",
-    "      $('div.input').hide('500');\n",
-    "      $('#toggleButton').val('Show Code')\n",
-    "    } else {\n",
-    "      $('div.input').show('500');\n",
-    "      $('#toggleButton').val('Hide Code')\n",
-    "    }\n",
-    "    code_shown = !code_shown\n",
+    "hide_me = ''\n",
+    "HTML('''<script>\n",
+    "code_show=true; \n",
+    "function code_toggle() {\n",
+    "  if (code_show) {\n",
+    "    $('div.input').each(function(id) {\n",
+    "      el = $(this).find('.cm-variable:first');\n",
+    "      if (id == 0 || el.text() == 'hide_me') {\n",
+    "        $(this).hide();\n",
+    "      }\n",
+    "    });\n",
+    "    $('div.output_prompt').css('opacity', 0);\n",
+    "  } else {\n",
+    "    $('div.input').each(function(id) {\n",
+    "      $(this).show();\n",
+    "    });\n",
+    "    $('div.output_prompt').css('opacity', 1);\n",
     "  }\n",
-    "\n",
-    "  $( document ).ready(function(){\n",
-    "    code_shown=false;\n",
-    "    $('div.input').hide()\n",
-    "  });\n",
+    "  code_show = !code_show\n",
+    "} \n",
+    "$( document ).ready(code_toggle);\n",
     "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form> ''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<script>\n",
-       "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
-       "    require(\n",
-       "        ['base/js/namespace', 'jquery'], \n",
-       "        function(jupyter, $) {\n",
-       "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
-       "                console.log(\"Auto-running all cells-below...\");\n",
-       "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
-       "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
-       "            });\n",
-       "        }\n",
-       "    );\n",
-       "</script>\n",
-       "\n",
-       "<script>\n",
-       "    display='block';\n",
-       "</script>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "%%html\n",
-    "<script>\n",
-    "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
-    "    require(\n",
-    "        ['base/js/namespace', 'jquery'], \n",
-    "        function(jupyter, $) {\n",
-    "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
-    "                console.log(\"Auto-running all cells-below...\");\n",
-    "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
-    "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
-    "            });\n",
-    "        }\n",
-    "    );\n",
-    "</script>\n",
-    "\n",
-    "<script>\n",
-    "    display='block';\n",
-    "</script>"
+    "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
    ]
   },
   {
@@ -187,6 +139,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "How is the expression 2^3 x (4 + 8) evaluated?\n",
+    "\n",
+    "example walk-through:\n",
+    "\n",
+    ">2^3 x **(4 + 8)**\n",
+    ">\n",
+    ">**2^3** x 12\n",
+    ">\n",
+    "> **8  x 12**\n",
+    ">\n",
+    ">   96"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "how about 2^3 x (4 + 8) on the computer:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2**3 * (4 + 8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "******\n",
     "\n",
     "### What do computers do?\n",
@@ -204,7 +200,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try inputting 3 + 5 x 6 into python:"
+    "Let's try inputting 3 + 5 x 6 into the computer:"
    ]
   },
   {
@@ -300,51 +296,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "How is the expression 2^3 x (4 + 8) evaluated?\n",
-    "\n",
-    "example walk-through:\n",
-    "\n",
-    ">2^3 x **(4 + 8)**\n",
-    ">\n",
-    ">**2^3** x 12\n",
-    ">\n",
-    "> **8  x 12**\n",
-    ">\n",
-    ">   96"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "how about 2^3 x (4 + 8) on the computer:"
+    "Want to see another example? Watch this video and try to solve it before they get to the solution!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Y3CZ_JBQ0do?rel=0&amp;start=17\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>"
+      ],
       "text/plain": [
-       "96"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "2**3 * (4 + 8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Want to see another example? Watch this [video](https://www.youtube.com/watch?v=Y3CZ_JBQ0do) and try to solve it before they get to the solution!"
+    "hide_me\n",
+    "\n",
+    "from IPython.display import HTML\n",
+    "\n",
+    "# Youtube\n",
+    "HTML('<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/Y3CZ_JBQ0do?rel=0&amp;start=17\" frameborder=\"0\" allow=\"autoplay; encrypted-media\" allowfullscreen></iframe>')"
    ]
   },
   {
@@ -359,7 +339,7 @@
     "\n",
     ">5\n",
     ">\n",
-    ">_*4\n",
+    ">_x4\n",
     ">\n",
     ">_+7\n",
     ">\n",
@@ -374,14 +354,14 @@
     "\n",
     "5 + 7 = <font color='green'>12</font>\n",
     "<font color='green'>12</font>^2 = <font color='blue'>144</font>\n",
-    "<font color='blue'>144</font> * 4 = 576\n",
+    "<font color='blue'>144</font> x 4 = 576\n",
     "\n",
     "How can we write all these expressions in one line to get this output?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +370,7 @@
        "576"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,14 +387,14 @@
     "\n",
     "5^2 = <font color='green'>25</font>\n",
     "<font color='green'>25</font> + 7 = <font color='blue'>32</font>\n",
-    "<font color='blue'>32</font> * 4 = 128\n",
+    "<font color='blue'>32</font> x 4 = 128\n",
     "\n",
     "How can we write these expressions in one line to get this output?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +403,7 @@
        "128"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +430,7 @@
        "201"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +450,7 @@
        "53"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,9 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you think of another order to write these operations that give a different output? \n",
-    "\n",
-    "Try typing it in the block below then press *Shift+Enter* to run the block to see its output."
+    "Can you think of another order to write these operations that give a different output? "
    ]
   },
   {
@@ -513,22 +491,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\n",
-      "Try the question again\n",
       "Solve 7 * (9 - 4)/2 + 3 using the order of operations and write your answer below:\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c17998af1050437d891e5845d790e86d",
+       "model_id": "dedde19d55a44ef4bcd5c32c8170aec5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -548,21 +524,19 @@
        "</p>\n"
       ],
       "text/plain": [
-       "FloatText(value=7.0, description='Your Answer')"
+       "FloatText(value=0.0, description='Your Answer')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are correct!\n"
-     ]
     }
    ],
    "source": [
+    "hide_me\n",
+    "\n",
+    "import ipywidgets as widgets\n",
+    "import IPython\n",
+    "\n",
     "answer = widgets.FloatText(value = 0, description='Your Answer',contiuous_update = False)\n",
     "op1 = widgets.Dropdown(value='', options={'Addition', 'Multiplication', 'Division', 'Brackets',''}, \n",
     "                         description='First Operation:',)\n",
@@ -573,34 +547,40 @@
     "def display():\n",
     "    print(\"Solve 7 * (9 - 4)/2 + 3 using the order of operations and write your answer below:\")\n",
     "    IPython.display.display(answer)\n",
+    "    \n",
     "def check2(b):\n",
+    "    if op1.value =='':\n",
+    "        pass\n",
     "    if op1.value == 'Brackets':\n",
     "        print(\"Great! What did you do next?\")\n",
     "        IPython.display.display(op2)\n",
     "    else:\n",
-    "        IPython.display.clear_output(wait=False)\n",
     "        print(\"Remember the B in BEDMAS is for brackets, try the question again.\")\n",
-    "        display()\n",
     "        \n",
     "def check3(c):\n",
+    "    if op2.value == '':\n",
+    "        pass\n",
     "    if op2.value == 'Multiplication':\n",
     "        print(\"Awesome! What did you do next?\")\n",
     "        IPython.display.display(op3)\n",
     "    else:\n",
-    "        IPython.display.clear_output(wait=False)\n",
-    "        print(\"Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\\nTry the question again\")\n",
-    "        display()\n",
+    "        print(\"Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\\nTry the question again.\")\n",
     "        \n",
     "def check4(d):\n",
+    "    if op3.value == '':\n",
+    "        pass\n",
     "    if op3.value == 'Division':\n",
-    "        print(\"Well done! If you did not get 9.5, it must have been a calculation error, try each step again.\")\n",
+    "        print(\"Well done! If you did not get 20.5, it must have been a calculation error, try each step again.\")\n",
     "    else:\n",
-    "        IPython.display.clear_output(wait=False)\n",
     "        print(\"Remember division and multiplication are done before addition and subtraction, try the question again.\")\n",
-    "        display()\n",
     "        \n",
     "def check(a):\n",
-    "    if answer.value == 9.5:\n",
+    "    op1.value = ''\n",
+    "    op2.value = ''\n",
+    "    op3.value = ''\n",
+    "    IPython.display.clear_output(wait=False)\n",
+    "    display()\n",
+    "    if answer.value == 20.5:\n",
     "        print(\"You are correct!\")\n",
     "    else:\n",
     "        print(\"Sorry, that's not the right answer. Which operation did you do first?\")\n",
@@ -622,13 +602,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c0f59589eb74c42af93bc4e7a06a20d",
+       "model_id": "b7b60d92ac254f70949a37c2b906408c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -648,7 +628,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Dropdown(description='Difficulty:', options=('Hard', 'Easy', 'Medium'), value='Hard')"
+       "Dropdown(description='Difficulty:', index=1, options=('Easy', 'Medium', 'Hard'), value='Medium')"
       ]
      },
      "metadata": {},
@@ -657,7 +637,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92b06a114282429db86320f2307562d9",
+       "model_id": "d4bbfe5977dd4cf48c6d697cfca751c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -682,12 +662,52 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "67be59b64e33453cb27086abcce33c21",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/html": [
+       "<p>Failed to display Jupyter Widget of type <code>Button</code>.</p>\n",
+       "<p>\n",
+       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
+       "  that the widgets JavaScript is still loading. If this message persists, it\n",
+       "  likely means that the widgets JavaScript library is either not installed or\n",
+       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
+       "  Widgets Documentation</a> for setup instructions.\n",
+       "</p>\n",
+       "<p>\n",
+       "  If you're reading this message in another frontend (for example, a static\n",
+       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
+       "  it may mean that your frontend doesn't currently support widgets.\n",
+       "</p>\n"
+      ],
+      "text/plain": [
+       "Button(description='Answer', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1+6)*5+3\n",
+      "(7)*5+3\n",
+      "35+3\n",
+      "38\n"
+     ]
     }
    ],
    "source": [
+    "hide_me\n",
+    "\n",
     "import ipywidgets as widgets\n",
     "import IPython\n",
-    "from IPython.display import HTML\n",
     "\n",
     "choice = widgets.Dropdown(\n",
     "    options={'Easy', 'Medium', 'Hard'},\n",
