--- a/Nicole/Order_of_Operations-1.ipynb
+++ b/Nicole/Order_of_Operations-1.ipynb
@@ -1,70 +1,125 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## From the menu above, select Cell $\\rightarrow$ Run All to start the notebook"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       " \n",
        "<script>\n",
-       "code_show=true; \n",
-       "function code_toggle() {\n",
-       "  if (code_show) {\n",
-       "    $('div.input').each(function(id) {\n",
-       "      el = $(this).find('.cm-variable:first');\n",
-       "      if (id == 0 || el.text() == 'hide_me') {\n",
-       "        $(this).hide();\n",
-       "      }\n",
-       "    });\n",
-       "    $('div.output_prompt').css('opacity', 0);\n",
-       "  } else {\n",
-       "    $('div.input').each(function(id) {\n",
-       "      $(this).show();\n",
-       "    });\n",
-       "    $('div.output_prompt').css('opacity', 1);\n",
+       "  function code_toggle() {\n",
+       "    if (code_shown){\n",
+       "      $('div.input').hide('500');\n",
+       "      $('#toggleButton').val('Show Code')\n",
+       "    } else {\n",
+       "      $('div.input').show('500');\n",
+       "      $('#toggleButton').val('Hide Code')\n",
+       "    }\n",
+       "    code_shown = !code_shown\n",
        "  }\n",
-       "  code_show = !code_show\n",
-       "} \n",
-       "$( document ).ready(code_toggle);\n",
+       "\n",
+       "  $( document ).ready(function(){\n",
+       "    code_shown=false;\n",
+       "    $('div.input').hide()\n",
+       "  });\n",
        "</script>\n",
-       "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>"
+       "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form> "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from IPython.display import HTML\n",
-    "hide_me = ''\n",
-    "HTML('''<script>\n",
-    "code_show=true; \n",
-    "function code_toggle() {\n",
-    "  if (code_show) {\n",
-    "    $('div.input').each(function(id) {\n",
-    "      el = $(this).find('.cm-variable:first');\n",
-    "      if (id == 0 || el.text() == 'hide_me') {\n",
-    "        $(this).hide();\n",
-    "      }\n",
-    "    });\n",
-    "    $('div.output_prompt').css('opacity', 0);\n",
-    "  } else {\n",
-    "    $('div.input').each(function(id) {\n",
-    "      $(this).show();\n",
-    "    });\n",
-    "    $('div.output_prompt').css('opacity', 1);\n",
+    "HTML(''' \n",
+    "<script>\n",
+    "  function code_toggle() {\n",
+    "    if (code_shown){\n",
+    "      $('div.input').hide('500');\n",
+    "      $('#toggleButton').val('Show Code')\n",
+    "    } else {\n",
+    "      $('div.input').show('500');\n",
+    "      $('#toggleButton').val('Hide Code')\n",
+    "    }\n",
+    "    code_shown = !code_shown\n",
     "  }\n",
-    "  code_show = !code_show\n",
-    "} \n",
-    "$( document ).ready(code_toggle);\n",
+    "\n",
+    "  $( document ).ready(function(){\n",
+    "    code_shown=false;\n",
+    "    $('div.input').hide()\n",
+    "  });\n",
     "</script>\n",
-    "<form action=\"javascript:code_toggle()\"><input style=\"opacity:1\" type=\"submit\" value=\"Click here to toggle on/off the raw code.\"></form>''')"
+    "<form action=\"javascript:code_toggle()\"><input type=\"submit\" id=\"toggleButton\" value=\"Show Code\"></form> ''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>\n",
+       "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
+       "    require(\n",
+       "        ['base/js/namespace', 'jquery'], \n",
+       "        function(jupyter, $) {\n",
+       "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+       "                console.log(\"Auto-running all cells-below...\");\n",
+       "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+       "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+       "            });\n",
+       "        }\n",
+       "    );\n",
+       "</script>\n",
+       "\n",
+       "<script>\n",
+       "    display='block';\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%html\n",
+    "<script>\n",
+    "    // AUTORUN ALL CELLS WHEN NOTEBOOK IS OPEN!\n",
+    "    require(\n",
+    "        ['base/js/namespace', 'jquery'], \n",
+    "        function(jupyter, $) {\n",
+    "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+    "                console.log(\"Auto-running all cells-below...\");\n",
+    "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+    "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+    "            });\n",
+    "        }\n",
+    "    );\n",
+    "</script>\n",
+    "\n",
+    "<script>\n",
+    "    display='block';\n",
+    "</script>"
    ]
   },
   {
@@ -72,7 +127,6 @@
    "metadata": {},
    "source": [
     "***\n",
-    "\n",
     "\n",
     "# Order of Operations\n",
     "\n",
@@ -89,12 +143,12 @@
     "\n",
     "In elementary Mathematics, we have two basic arithmetic operations: addition and multiplication. Each of these operations comes with an \"opposite\" (a mathematician might say *inverse*) operation. The opposite of addition is subtraction, and the opposite of multiplications is division.\n",
     "\n",
-    "When there is a single operation to perform, we all know what to do, including the computer. For example, we could have the computer calculate the sum $3+7$ or the product $9\\times 3$:"
+    "When there is a single operation to perform, we all know what to do, including the computer. For example, we could have the computer calculate the sum $3+7$ or the product $9\\cdot 3$:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +157,7 @@
        "10"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +177,7 @@
        "27"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +206,7 @@
        "3"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +226,7 @@
        "9.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,20 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "21"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "(5+9)+7"
    ]
@@ -232,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +284,7 @@
        "40"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +304,7 @@
        "31"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +335,7 @@
        "(2, 12)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +355,7 @@
        "(1.0, 4.0)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, lets see what we get if we do the multiplication first:"
+    "Next, let's see what we get if we do the multiplication first:"
    ]
   },
   {
@@ -546,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -555,20 +598,13 @@
        "96"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "2**3 * (4 + 8)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Want to see another example? Watch this video and try to solve it before they get to the solution!"
    ]
   },
   {
@@ -590,7 +626,7 @@
     "\n",
     ">5\n",
     ">\n",
-    ">_x4\n",
+    ">_*4\n",
     ">\n",
     ">_+7\n",
     ">\n",
@@ -605,14 +641,14 @@
     "\n",
     "5 + 7 = <font color='green'>12</font>\n",
     "<font color='green'>12</font>^2 = <font color='blue'>144</font>\n",
-    "<font color='blue'>144</font> x 4 = 576\n",
+    "<font color='blue'>144</font> * 4 = 576\n",
     "\n",
     "If we enter these operations in left-to-right order, what do we get?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -621,7 +657,7 @@
        "201"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +691,7 @@
     "\n",
     "5^2 = <font color='green'>25</font>\n",
     "<font color='green'>25</font> + 7 = <font color='blue'>32</font>\n",
-    "<font color='blue'>32</font> x 4 = 128\n",
+    "<font color='blue'>32</font> * 4 = 128\n",
     "\n",
     "How can we write these expressions in one line to get this output?"
    ]
@@ -676,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +721,7 @@
        "53"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +734,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you think of another order to write these operations that give a different output? "
+    "Can you think of another order to write these operations that give a different output? \n",
+    "\n",
+    "Try typing it in the block below then press *Shift+Enter* to run the block to see its output."
    ]
   },
   {
@@ -726,22 +764,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\n",
+      "Try the question again\n",
       "Solve 7 * (9 - 4)/2 + 3 using the order of operations and write your answer below:\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dedde19d55a44ef4bcd5c32c8170aec5",
+       "model_id": "c17998af1050437d891e5845d790e86d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -761,19 +799,21 @@
        "</p>\n"
       ],
       "text/plain": [
-       "FloatText(value=0.0, description='Your Answer')"
+       "FloatText(value=7.0, description='Your Answer')"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are correct!\n"
+     ]
     }
    ],
    "source": [
-    "hide_me\n",
-    "\n",
-    "import ipywidgets as widgets\n",
-    "import IPython\n",
-    "\n",
     "answer = widgets.FloatText(value = 0, description='Your Answer',contiuous_update = False)\n",
     "op1 = widgets.Dropdown(value='', options={'Addition', 'Multiplication', 'Division', 'Brackets',''}, \n",
     "                         description='First Operation:',)\n",
@@ -784,40 +824,34 @@
     "def display():\n",
     "    print(\"Solve 7 * (9 - 4)/2 + 3 using the order of operations and write your answer below:\")\n",
     "    IPython.display.display(answer)\n",
-    "    \n",
     "def check2(b):\n",
-    "    if op1.value =='':\n",
-    "        pass\n",
     "    if op1.value == 'Brackets':\n",
     "        print(\"Great! What did you do next?\")\n",
     "        IPython.display.display(op2)\n",
     "    else:\n",
+    "        IPython.display.clear_output(wait=False)\n",
     "        print(\"Remember the B in BEDMAS is for brackets, try the question again.\")\n",
+    "        display()\n",
     "        \n",
     "def check3(c):\n",
-    "    if op2.value == '':\n",
-    "        pass\n",
     "    if op2.value == 'Multiplication':\n",
     "        print(\"Awesome! What did you do next?\")\n",
     "        IPython.display.display(op3)\n",
     "    else:\n",
-    "        print(\"Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\\nTry the question again.\")\n",
+    "        IPython.display.clear_output(wait=False)\n",
+    "        print(\"Remember division and multiplication are done left to right when there's no brackets and before addition and subtraction.\\nTry the question again\")\n",
+    "        display()\n",
     "        \n",
     "def check4(d):\n",
-    "    if op3.value == '':\n",
-    "        pass\n",
     "    if op3.value == 'Division':\n",
-    "        print(\"Well done! If you did not get 20.5, it must have been a calculation error, try each step again.\")\n",
+    "        print(\"Well done! If you did not get 9.5, it must have been a calculation error, try each step again.\")\n",
     "    else:\n",
+    "        IPython.display.clear_output(wait=False)\n",
     "        print(\"Remember division and multiplication are done before addition and subtraction, try the question again.\")\n",
+    "        display()\n",
     "        \n",
     "def check(a):\n",
-    "    op1.value = ''\n",
-    "    op2.value = ''\n",
-    "    op3.value = ''\n",
-    "    IPython.display.clear_output(wait=False)\n",
-    "    display()\n",
-    "    if answer.value == 20.5:\n",
+    "    if answer.value == 9.5:\n",
     "        print(\"You are correct!\")\n",
     "    else:\n",
     "        print(\"Sorry, that's not the right answer. Which operation did you do first?\")\n",
@@ -839,13 +873,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b7b60d92ac254f70949a37c2b906408c",
+       "model_id": "7c0f59589eb74c42af93bc4e7a06a20d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -865,7 +899,7 @@
        "</p>\n"
       ],
       "text/plain": [
-       "Dropdown(description='Difficulty:', index=1, options=('Easy', 'Medium', 'Hard'), value='Medium')"
+       "Dropdown(description='Difficulty:', options=('Hard', 'Easy', 'Medium'), value='Hard')"
       ]
      },
      "metadata": {},
@@ -874,7 +908,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4bbfe5977dd4cf48c6d697cfca751c4",
+       "model_id": "92b06a114282429db86320f2307562d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -899,52 +933,12 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "67be59b64e33453cb27086abcce33c21",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/html": [
-       "<p>Failed to display Jupyter Widget of type <code>Button</code>.</p>\n",
-       "<p>\n",
-       "  If you're reading this message in the Jupyter Notebook or JupyterLab Notebook, it may mean\n",
-       "  that the widgets JavaScript is still loading. If this message persists, it\n",
-       "  likely means that the widgets JavaScript library is either not installed or\n",
-       "  not enabled. See the <a href=\"https://ipywidgets.readthedocs.io/en/stable/user_install.html\">Jupyter\n",
-       "  Widgets Documentation</a> for setup instructions.\n",
-       "</p>\n",
-       "<p>\n",
-       "  If you're reading this message in another frontend (for example, a static\n",
-       "  rendering on GitHub or <a href=\"https://nbviewer.jupyter.org/\">NBViewer</a>),\n",
-       "  it may mean that your frontend doesn't currently support widgets.\n",
-       "</p>\n"
-      ],
-      "text/plain": [
-       "Button(description='Answer', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1+6)*5+3\n",
-      "(7)*5+3\n",
-      "35+3\n",
-      "38\n"
-     ]
     }
    ],
    "source": [
-    "hide_me\n",
-    "\n",
     "import ipywidgets as widgets\n",
     "import IPython\n",
+    "from IPython.display import HTML\n",
     "\n",
     "choice = widgets.Dropdown(\n",
     "    options={'Easy', 'Medium', 'Hard'},\n",
